@@ -14,4 +14,4 @@
 	match attachment (index > 1 and size < 200 and type "fnmatch")
 - attach get name from content-disposition
 - dump settings from conf on -vvv
-- add "Received" header? number rules and add "X-fdm-rule:" header?
+- make headers optional
